Create third and fourth views, validate the user and continue to veri… (#4)
* Create third and fourth views, validate the user and continue to verify the code. Handle error messages on validation fail, added tests for code verification and renamed controller and views.

* Removed unused class. Removed view CSRF code as the method changed to a GET and is no longer needed. Fixed a bug with the error message when the code is invalid. Added test case for scenario where the code begins with a zero. Fixed the user factory when running the tests multiple times.

--- a/resources/sass/twoFa.scss
+++ b/resources/sass/twoFa.scss
@@ -23,3 +23,15 @@
     border: none;
     box-shadow: 0 4px 6px -6px #222;
 }
+.success-container {
+    padding: 30px 20px 0 20px;
+    text-align: center;
+    font-size: 14pt;
+}
+.hello-word {
+    font-size: 18pt;
+}
+.username-word {
+    color: #018ffd;
+}
+
